# MoZuku

./: .gitignore  .gitmodules  README.md  flake.nix  nvfetcher.toml
.github/workflows/: ci.yml
_sources/: generated.json  generated.nix
dev-flake/: dev-flake.nix
flake-mofules/: devenv.nix  git-hooks.nix  tree-fmt.nix
mozuku-lsp/: CMakeLists.txt
mozuku-lsp/include/: analyzer.hpp  comment_extractor.hpp  encoding_utils.hpp  grammar_checker.hpp  lsp.hpp  mecab_manager.hpp  pos_analyzer.hpp  text_processor.hpp  utf16.hpp  wikipedia.hpp
mozuku-lsp/src/: analyzer.cpp  comment_extractor.cpp  encoding_utils.cpp  grammar_checker.cpp  lsp.cpp  main.cpp  mecab_manager.cpp  pos_analyzer.cpp  text_processor.cpp  utf16.cpp  wikipedia.cpp
vscode-mozuku/: .vscodeignore  CHANGELOG.md  README.md  build-lsp.js  language-configuration.json  package-lock.json  package.json
vscode-mozuku/src/: client.ts  extension.ts
